--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 3000
 MONGO_URL = mongodb+srv://admin:admin123@cluster0.gve6l.mongodb.net/origano?retryWrites=true&w=majority
+PROVIDER_COMMISSION = 20
+COMPANY_COMMISSION = 12
